Update and rename jianli/1.html to  jianli/1.html

--- a/jianli/1.html
+++ b/jianli/1.html
@@ -297,7 +297,7 @@
         </div>
         <div class="more">
             <p>更多作品 , 待更新 . . .</p>
-            <p>以前挺多小案例的，后来自己重装电脑系统搞坏了，全没了，这是</p>
+            <p>（以前挺多小案例的，后来自己重装电脑系统搞坏了，全没了，这是存放在git上的两个小案例）</p>
         </div>
     </div>
 </div>
